--- a/win_svc/ActionHandlerService/ActionHandlerService.csproj
+++ b/win_svc/ActionHandlerService/ActionHandlerService.csproj
@@ -112,6 +112,7 @@
   <ItemGroup>
     <Compile Include="Helpers\ActionsParser.cs" />
     <Compile Include="Helpers\Logger.cs" />
+    <Compile Include="Helpers\WorkflowEventsMessagesHelper.cs" />
     <Compile Include="MessageHandlers\Notifications\EmailSettingsRetriever.cs" />
     <Compile Include="MessageHandlers\Notifications\SmtpClient.cs" />
     <Compile Include="MessageHandlers\PropertyChange\PropertyChangeMessageHandler.cs" />
