--- a/svc/ArtifactStore.Tests/ArtifactStore.Tests.csproj
+++ b/svc/ArtifactStore.Tests/ArtifactStore.Tests.csproj
@@ -94,6 +94,7 @@
     <Compile Include="Helpers\ReuseSystemPropertiesMapTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\SqlArtifactRelationshipsRepositoryTests.cs" />
+    <Compile Include="Repositories\SqlArtifactRepositoryTests.cs" />
     <Compile Include="Repositories\SqlDiscussionsRepositoryTests.cs" />
     <Compile Include="Repositories\SqlArtifactVersionsRepositoryTests.cs" />
     <Compile Include="Repositories\SqlAttachmentsRepositoryTests.cs" />
