--- a/svc/lib/ServiceLibrary.Tests/ServiceLibrary.Tests.csproj
+++ b/svc/lib/ServiceLibrary.Tests/ServiceLibrary.Tests.csproj
@@ -102,13 +102,17 @@
     <Compile Include="Helpers\TestsForHelpers\I18HelperTests.cs" />
     <Compile Include="Helpers\TestsForHelpers\LoggableApiControllerTests.cs" />
     <Compile Include="Helpers\TestsForHelpers\StatusControllerHelperTests.cs" />
+    <Compile Include="Helpers\Validators\DatePropertyValidatorTests.cs" />
+    <Compile Include="Helpers\Validators\NumberPropertyValidatorTests.cs" />
     <Compile Include="Helpers\Validators\ReusePropertyValidatorTests.cs" />
+    <Compile Include="Helpers\Validators\UserPropertyValidatorTests.cs" />
     <Compile Include="Helpers\WebApiConfigHelper.cs" />
     <Compile Include="LocalLog\LocalLogTests.cs" />
     <Compile Include="Models\Licenses\FeatureInformationTests.cs" />
     <Compile Include="Models\Licenses\FeatureLicenseHelperTests.cs" />
     <Compile Include="Models\LicenseTransactionTests.cs" />
     <Compile Include="Models\PaginationExtensionsTests.cs" />
+    <Compile Include="Models\Workflow\Actions\PropertyChangeActionTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\ApplicationSettingsRepositoryTests.cs" />
     <Compile Include="Repositories\ArtifactPermissionsRepositoryTests.cs" />
