DEV-2286 getting tenant information from the Tenants database

--- a/win_svc/ActionHandlerService/App.config
+++ b/win_svc/ActionHandlerService/App.config
@@ -4,8 +4,7 @@
     <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
   </configSections>
   <connectionStrings>
-    <add name="TenantsDatabase" providerName="System.Data.SqlClient" connectionString="data source=BlueprintDevDB;initial catalog=Raptor;integrated security=True;min pool size=4;max pool size=128;load balance timeout=2;packet size=16384;connectretrycount=3;connectretryinterval=3;MultipleActiveResultSets=True;" />
-    <add name="RaptorMain" providerName="System.Data.SqlClient" connectionString="data source=BlueprintDevDB;initial catalog=Raptor;integrated security=True;min pool size=4;max pool size=128;load balance timeout=2;packet size=16384;connectretrycount=3;connectretryinterval=3;MultipleActiveResultSets=True;" />
+    <add name="TenantsDatabase" providerName="System.Data.SqlClient" connectionString="Data Source=bp-rds-master.cp9nykut9yhr.us-east-1.rds.amazonaws.com,1433;Initial Catalog=Tenants;Integrated Security=False;User Id=Tenants;Password=$Blueprint2017;MultipleActiveResultSets=True" />
   </connectionStrings>
   <log4net>
     <root>
@@ -39,12 +38,6 @@
   <appSettings>
     <!--Connection string for SQL Server transport-->
     <add key="NServiceBus.ConnectionString" value="Data Source=BlueprintDevDB;Initial Catalog=Raptor;Integrated Security=True;Max Pool Size=80" />
-
-    <!-- Sepecifies whether service works as a single tenant provider or as a multiple tenant provider. Default value is "Single" -->
-    <!-- Supported values -->
-    <!-- Single -->
-    <!-- Multiple -->
-    <add key="Tenancy" value="Single" />
 
     <!-- Specifies the list of supported action types. Default value is "All". We can also specify multiple types e.g., Property,Notification -->
     <!-- The list should be in a comma separated format. -->
