Implementing multi tenancy for generate user stories action

--- a/win_svc/ActionHandlerService/App.config
+++ b/win_svc/ActionHandlerService/App.config
@@ -4,7 +4,7 @@
     <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
   </configSections>
   <connectionStrings>
-    <add name="TenantsDatabase" providerName="System.Data.SqlClient" connectionString="Data Source=bp-rds-master.cp9nykut9yhr.us-east-1.rds.amazonaws.com,1433;Initial Catalog=Tenants;Integrated Security=False;User Id=Tenants;Password=$Blueprint2017;MultipleActiveResultSets=True" />
+    <add name="TenantsDatabase" providerName="System.Data.SqlClient" connectionString="Data Source=BlueprintDevDB;Initial Catalog=Raptor;Integrated Security=True;Max Pool Size=80" />
   </connectionStrings>
   <log4net>
     <root>
