--- a/win_svc/BlueprintSys.RC.Services/BlueprintSys.RC.Services.csproj
+++ b/win_svc/BlueprintSys.RC.Services/BlueprintSys.RC.Services.csproj
@@ -135,6 +135,7 @@
     <Compile Include="MessageHandlers\IActionHelper.cs" />
     <Compile Include="ActionHandlerService.cs" />
     <Compile Include="Models\TenantInformation.cs" />
+    <Compile Include="Repositories\GenerateUserStoriesActionRepository.cs" />
     <Compile Include="WorkflowServiceBusServer.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
