Dev 2185 - implementing async action processing for new artifacts (#4914)
* Implementing handling of generate descendants handler

* Minor refactoring

* Converting sending message endpoint to send only. Also creating a repositories baggage instead of extending constructor.

* Moving files to service library and cross cutting for better definition

* [dev530] moving more models to service library so that we can establish better code reuse for event triggers across projecs

* [dev530] Fixing Services solution errors in tests due to file movement

* [dev530] fixing references due to file movement

* Moving models to service library

* More file modifications

* modifying artifactpublishedactionhelper

* merge develop

* Fixing error due to IMessage conversion to IWorkflowMessage

* [dev-2185] Implement triggers on new artifact creation

* [dev-2185] removing unused properties

* removing unused parameter

* Implementing multi tenancy for generate user stories action

* fixing unit tests and making generate user stories proper multi tenant

--- a/svc/lib/ServiceLibrary/ServiceLibrary.csproj
+++ b/svc/lib/ServiceLibrary/ServiceLibrary.csproj
@@ -283,6 +283,7 @@
     <Compile Include="Models\SubArtifact.cs" />
     <Compile Include="Models\UserGroup.cs" />
     <Compile Include="Models\UserInfo.cs" />
+    <Compile Include="Models\VersionControl\IBaseArtifactVersionControlInfo.cs" />
     <Compile Include="Models\VersionControl\ISaveArtifactRepository.cs" />
     <Compile Include="Helpers\Validators\IValidationContext.cs" />
     <Compile Include="Models\VersionControl\PublishParameters.cs" />
@@ -307,6 +308,7 @@
     <Compile Include="Models\Workflow\IWorkflowEvent.cs" />
     <Compile Include="Models\Workflow\IWorkflowEventASynchronousAction.cs" />
     <Compile Include="Models\Workflow\IWorkflowEventSynchronousAction.cs" />
+    <Compile Include="Models\Workflow\IWorkflowMessage.cs" />
     <Compile Include="Models\Workflow\PostopWorkflowEventTriggers.cs" />
     <Compile Include="Models\Workflow\PreopWorkflowEventTriggers.cs" />
     <Compile Include="Models\Workflow\SqlCustomToInstancePropertyTypeIds.cs" />
@@ -317,12 +319,14 @@
     <Compile Include="Models\Workflow\SqlWorkFlowState.cs" />
     <Compile Include="Models\Workflow\SqlWorkFlowStateInformation.cs" />
     <Compile Include="Models\Workflow\SqlWorkflowTransition.cs" />
+    <Compile Include="Models\Workflow\StateChangeResult.cs" />
     <Compile Include="Models\Workflow\WorkflowConstants.cs" />
     <Compile Include="Models\Workflow\WorkflowEventAction.cs" />
     <Compile Include="Models\Workflow\WorkflowEventCondition.cs" />
     <Compile Include="Models\Workflow\WorkflowEventSynchronousWorkflowEventAction.cs" />
     <Compile Include="Models\Workflow\WorkflowEventTrigger.cs" />
     <Compile Include="Models\Workflow\WorkflowEventTriggers.cs" />
+    <Compile Include="Models\Workflow\WorkflowMessageArtifactInfo.cs" />
     <Compile Include="Models\Workflow\WorkflowState.cs" />
     <Compile Include="Models\Workflow\WorkflowStateChangeParameter.cs" />
     <Compile Include="Models\Workflow\WorkflowTransition.cs" />
