Workflow property change, added more unit tests for when errors are returned. Also refactored building of execution parameters into separate class to make classes more unit testable.

--- a/svc/ArtifactStore.Tests/ArtifactStore.Tests.csproj
+++ b/svc/ArtifactStore.Tests/ArtifactStore.Tests.csproj
@@ -88,6 +88,7 @@
     <Compile Include="Controllers\StatusControllerTests.cs" />
     <Compile Include="Controllers\ArtifactControllerTests.cs" />
     <Compile Include="Controllers\WorkflowControllerTests.cs" />
+    <Compile Include="Executors\StateChangeExecutorHelperTests.cs" />
     <Compile Include="Executors\StateChangeExecutorTests.cs" />
     <Compile Include="Helpers\MentionHelperTests.cs" />
     <Compile Include="Helpers\ProcessInfoHelperTests.cs" />
