Adds shared assembly versioning to Blueprint messaging and services projects (#4950)

--- a/svc/lib/HtmlLibrary.Tests/HtmlLibrary.Tests.csproj
+++ b/svc/lib/HtmlLibrary.Tests/HtmlLibrary.Tests.csproj
@@ -52,6 +52,12 @@
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\..\SolutionAssemblyInfo.cs">
+      <Link>Properties\SolutionAssemblyInfo.cs</Link>
+    </Compile>
+    <Compile Include="..\..\SolutionAssemblyVersion.cs">
+      <Link>Properties\SolutionAssemblyVersion.cs</Link>
+    </Compile>
     <Compile Include="MentionProcessorTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
