--- a/win_svc/BlueprintSys.RC.Services/BlueprintSys.RC.Services.csproj
+++ b/win_svc/BlueprintSys.RC.Services/BlueprintSys.RC.Services.csproj
@@ -110,6 +110,12 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\..\svc\SolutionAssemblyInfo.cs">
+      <Link>Properties\SolutionAssemblyInfo.cs</Link>
+    </Compile>
+    <Compile Include="..\..\svc\SolutionAssemblyVersion.cs">
+      <Link>Properties\SolutionAssemblyVersion.cs</Link>
+    </Compile>
     <Compile Include="Helpers\ActionsParser.cs" />
     <Compile Include="Helpers\Logger.cs" />
     <Compile Include="Helpers\WorkflowEventsMessagesHelper.cs" />
