--- a/svc/lib/HtmlLibrary/HtmlLibrary.csproj
+++ b/svc/lib/HtmlLibrary/HtmlLibrary.csproj
@@ -45,6 +45,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\..\SolutionAssemblyInfo.cs">
+      <Link>Properties\SolutionAssemblyInfo.cs</Link>
+    </Compile>
+    <Compile Include="..\..\SolutionAssemblyVersion.cs">
+      <Link>Properties\SolutionAssemblyVersion.cs</Link>
+    </Compile>
     <Compile Include="MentionProcessor.cs" />
     <Compile Include="IMentionValidator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
