--- a/win_svc/BluePrintSys.Messaging.CrossCutting/BluePrintSys.Messaging.CrossCutting.csproj
+++ b/win_svc/BluePrintSys.Messaging.CrossCutting/BluePrintSys.Messaging.CrossCutting.csproj
@@ -85,6 +85,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\..\svc\SolutionAssemblyInfo.cs">
+      <Link>Properties\SolutionAssemblyInfo.cs</Link>
+    </Compile>
+    <Compile Include="..\..\svc\SolutionAssemblyVersion.cs">
+      <Link>Properties\SolutionAssemblyVersion.cs</Link>
+    </Compile>
     <Compile Include="Annotations\Annotations.cs" />
     <Compile Include="AppSettingsHelper.cs" />
     <Compile Include="Collections\ConcurrentPriorityQueue.cs" />
