--- a/win_svc/BluePrintSys.Messaging.CrossCutting/BluePrintSys.Messaging.CrossCutting.csproj
+++ b/win_svc/BluePrintSys.Messaging.CrossCutting/BluePrintSys.Messaging.CrossCutting.csproj
@@ -128,6 +128,7 @@
     <Compile Include="Logging\StackTraceProvider.cs" />
     <Compile Include="Logging\StandardLogEntry.cs" />
     <Compile Include="Models\Enums\MessageType.cs" />
+    <Compile Include="Models\Exceptions\EntityNotFoundException.cs" />
     <Compile Include="Models\Exceptions\MessageHeaderValueNotFoundException.cs" />
     <Compile Include="Models\Exceptions\UnsupportedActionTypeException.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
