--- a/win_svc/BlueprintSys.RC.Services/BlueprintSys.RC.Services.csproj
+++ b/win_svc/BlueprintSys.RC.Services/BlueprintSys.RC.Services.csproj
@@ -120,6 +120,7 @@
     <Compile Include="Helpers\Logger.cs" />
     <Compile Include="Helpers\WorkflowEventsMessagesHelper.cs" />
     <Compile Include="MessageHandlers\BoundaryReachedActionHandler.cs" />
+    <Compile Include="MessageHandlers\MessageActionHandler.cs" />
     <Compile Include="MessageHandlers\Notifications\EmailSettingsRetriever.cs" />
     <Compile Include="MessageHandlers\Notifications\SmtpClient.cs" />
     <Compile Include="MessageHandlers\PropertyChange\PropertyChangeMessageHandler.cs" />
