[dev-2182] unit tests for newly created artifacts processor

--- a/win_svc/BlueprintSys.RC.Services.Tests/BlueprintSys.RC.Services.Tests.csproj
+++ b/win_svc/BlueprintSys.RC.Services.Tests/BlueprintSys.RC.Services.Tests.csproj
@@ -122,6 +122,7 @@
     </Compile>
     <Compile Include="ActionsParserTests.cs" />
     <Compile Include="ConfigHelperTests.cs" />
+    <Compile Include="MessageHandlers\ArtifactPublished\CreatedArtifactsNotificationHandlerTests.cs" />
     <Compile Include="PropertyChangeActionHelperTests.cs" />
     <Compile Include="StateTransitionActionHelperTests.cs" />
     <Compile Include="NotificationsActionHelperTests.cs" />
