[dev-2182] unit tests for already published artifact messages (#4964)

--- a/win_svc/BlueprintSys.RC.Services.Tests/BlueprintSys.RC.Services.Tests.csproj
+++ b/win_svc/BlueprintSys.RC.Services.Tests/BlueprintSys.RC.Services.Tests.csproj
@@ -123,6 +123,7 @@
     <Compile Include="ActionsParserTests.cs" />
     <Compile Include="ConfigHelperTests.cs" />
     <Compile Include="MessageHandlers\ArtifactPublished\CreatedArtifactsNotificationHandlerTests.cs" />
+    <Compile Include="MessageHandlers\ArtifactPublished\UpdatedArtifactsNotificationHandlerTests.cs" />
     <Compile Include="PropertyChangeActionHelperTests.cs" />
     <Compile Include="StateTransitionActionHelperTests.cs" />
     <Compile Include="NotificationsActionHelperTests.cs" />
