--- a/svc/lib/ServiceLibrary.Tests/ServiceLibrary.Tests.csproj
+++ b/svc/lib/ServiceLibrary.Tests/ServiceLibrary.Tests.csproj
@@ -118,6 +118,7 @@
     <Compile Include="Models\Workflow\Actions\PropertyChangeActionTests.cs" />
     <Compile Include="Models\Workflow\Actions\PropertyChangeActionTests.Number.cs" />
     <Compile Include="Models\Workflow\Actions\PropertyChangeActionTests.User.cs" />
+    <Compile Include="Models\Workflow\PreopWorkflowEventTriggersTest.cs" />
     <Compile Include="Models\Workflow\WorkflowEventTriggersTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\ApplicationSettingsRepositoryTests.cs" />
