Added unit tests to increase coverage for choice property change actions.

--- a/svc/lib/ServiceLibrary.Tests/ServiceLibrary.Tests.csproj
+++ b/svc/lib/ServiceLibrary.Tests/ServiceLibrary.Tests.csproj
@@ -115,6 +115,7 @@
     <Compile Include="Models\Licenses\FeatureLicenseHelperTests.cs" />
     <Compile Include="Models\LicenseTransactionTests.cs" />
     <Compile Include="Models\PaginationExtensionsTests.cs" />
+    <Compile Include="Models\Workflow\Actions\PropertyChangeActionTests.Choice.cs" />
     <Compile Include="Models\Workflow\Actions\PropertyChangeActionTests.cs" />
     <Compile Include="Models\Workflow\Actions\PropertyChangeActionTests.Number.cs" />
     <Compile Include="Models\Workflow\Actions\PropertyChangeActionTests.User.cs" />
