--- a/win_svc/BluePrintSys.Messaging.CrossCutting/packages.config
+++ b/win_svc/BluePrintSys.Messaging.CrossCutting/packages.config
@@ -1,8 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="log4net" version="2.0.8" targetFramework="net452" />
-  <package id="NServiceBus" version="6.3.1" targetFramework="net452" />
-  <package id="NServiceBus.RabbitMQ" version="4.3.2" targetFramework="net452" />
+  <package id="Microsoft.Diagnostics.Tracing.EventSource.Redist" version="1.1.28" targetFramework="net452" />
+  <package id="NServiceBus" version="6.4.0" targetFramework="net452" />
+  <package id="NServiceBus.RabbitMQ" version="4.3.3" targetFramework="net452" />
   <package id="NServiceBus.SqlServer" version="3.1.2" targetFramework="net452" />
-  <package id="RabbitMQ.Client" version="4.1.3" targetFramework="net452" />
+  <package id="RabbitMQ.Client" version="5.0.1" targetFramework="net452" />
 </packages>
