--- a/win_svc/BlueprintSys.RC.ImageService/packages.config
+++ b/win_svc/BlueprintSys.RC.ImageService/packages.config
@@ -9,11 +9,12 @@
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.SelfHost" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net452" />
+  <package id="Microsoft.Diagnostics.Tracing.EventSource.Redist" version="1.1.28" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net452" />
-  <package id="NServiceBus" version="6.3.1" targetFramework="net452" />
-  <package id="NServiceBus.Callbacks" version="2.0.0" targetFramework="net452" />
-  <package id="NServiceBus.RabbitMQ" version="4.3.2" targetFramework="net452" />
+  <package id="NServiceBus" version="6.4.0" targetFramework="net452" />
+  <package id="NServiceBus.Callbacks" version="2.0.1" targetFramework="net452" />
+  <package id="NServiceBus.RabbitMQ" version="4.3.3" targetFramework="net452" />
   <package id="NServiceBus.SqlServer" version="3.1.2" targetFramework="net452" />
-  <package id="RabbitMQ.Client" version="4.1.3" targetFramework="net452" />
+  <package id="RabbitMQ.Client" version="5.0.1" targetFramework="net452" />
   <package id="Topshelf" version="4.0.3" targetFramework="net452" />
 </packages>
