--- a/win_svc/BlueprintSys.RC.Services.Tests/BlueprintSys.RC.Services.Tests.csproj
+++ b/win_svc/BlueprintSys.RC.Services.Tests/BlueprintSys.RC.Services.Tests.csproj
@@ -138,6 +138,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RepositoryTests.cs" />
     <Compile Include="SqlConnectionWrapperMock.cs" />
+    <Compile Include="WorkflowEventsMessagesHelperTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config">
