--- a/svc/AdminStore/AdminStore.csproj
+++ b/svc/AdminStore/AdminStore.csproj
@@ -148,7 +148,7 @@
     <Compile Include="Models\DTO\ProjectDto.cs" />
     <Compile Include="Models\ProjectRole.cs" />
     <Compile Include="Models\QueryDataResult.cs" />
-    <Compile Include="Models\RolesAssignments.cs" />
+    <Compile Include="Models\RoleAssignment.cs" />
     <Compile Include="Models\TabularData.cs" />
     <Compile Include="Models\TabularPagination.cs" />
     <Compile Include="Models\UpdateUserPassword.cs" />
