--- a/svc/AdminStore.Tests/AdminStore.Tests.csproj
+++ b/svc/AdminStore.Tests/AdminStore.Tests.csproj
@@ -98,6 +98,7 @@
     <Compile Include="Controllers\InstanceControllerTests.cs" />
     <Compile Include="Controllers\UsersControllerTests.cs" />
     <Compile Include="Controllers\WorkflowControllerTest.cs" />
+    <Compile Include="Extensions\CreateWorkflowDtoExtensionTests.cs" />
     <Compile Include="Helpers\EmailHelperTests.cs" />
     <Compile Include="Helpers\HashingUtilitiesTests.cs" />
     <Compile Include="Helpers\PrivilegesManagerTests.cs" />
