--- a/svc/SearchService/SearchService.csproj
+++ b/svc/SearchService/SearchService.csproj
@@ -107,6 +107,7 @@
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\ItemSearchController.cs" />
     <Compile Include="Controllers\ProjectSearchController.cs" />
+    <Compile Include="Controllers\SemanticSearchController.cs" />
     <Compile Include="Controllers\StatusController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -129,12 +130,15 @@
     <Compile Include="Models\ProjectSearchResult.cs" />
     <Compile Include="Models\SearchResultSet.cs" />
     <Compile Include="Models\SearchResult.cs" />
+    <Compile Include="Models\SuggestionsSearchResult.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\ConfigRepository.cs" />
     <Compile Include="Repositories\IItemSearchRepository.cs" />
     <Compile Include="Repositories\IProjectSearchRepository.cs" />
+    <Compile Include="Repositories\SemanticSearchRepository.cs" />
     <Compile Include="Repositories\SqlItemSearchRepository.cs" />
     <Compile Include="Repositories\SqlProjectSearchRepository.cs" />
+    <Compile Include="Services\SemanticSearchService.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\lib\ServiceLibrary\ServiceLibrary.csproj">
