--- a/svc/ArtifactStore.Tests/ArtifactStore.Tests.csproj
+++ b/svc/ArtifactStore.Tests/ArtifactStore.Tests.csproj
@@ -110,6 +110,10 @@
       <Project>{74353EB4-59E8-4F3E-A9E3-9927546970FD}</Project>
       <Name>BluePrintSys.Messaging.CrossCutting</Name>
     </ProjectReference>
+    <ProjectReference Include="..\AdminStore\AdminStore.csproj">
+      <Project>{AA349995-9A2A-45C5-9EC1-19908667BD4E}</Project>
+      <Name>AdminStore</Name>
+    </ProjectReference>
     <ProjectReference Include="..\ArtifactStore\ArtifactStore.csproj">
       <Project>{30144C60-F58C-4B49-BE52-60C7884B2FB7}</Project>
       <Name>ArtifactStore</Name>
