--- a/svc/SearchService/SearchService.csproj
+++ b/svc/SearchService/SearchService.csproj
@@ -117,6 +117,7 @@
     <Compile Include="Helpers\SearchConfiguration.cs" />
     <Compile Include="Helpers\ISearchConfiguration.cs" />
     <Compile Include="Helpers\SearchConfigurationProvider.cs" />
+    <Compile Include="Models\ArtifactSearchResult.cs" />
     <Compile Include="Models\ItemNameSearchResult.cs" />
     <Compile Include="Models\FullTextSearchCriteria.cs" />
     <Compile Include="Models\FullTextSearchResult.cs" />
@@ -130,6 +131,8 @@
     <Compile Include="Models\ProjectSearchResult.cs" />
     <Compile Include="Models\SearchResultSet.cs" />
     <Compile Include="Models\SearchResult.cs" />
+    <Compile Include="Models\SemanticSearchSuggestionParameters.cs" />
+    <Compile Include="Models\SuggestionsSearchCriteria.cs" />
     <Compile Include="Models\SuggestionsSearchResult.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\ConfigRepository.cs" />
