--- a/win_svc/BlueprintSys.RC.Services/BlueprintSys.RC.Services.csproj
+++ b/win_svc/BlueprintSys.RC.Services/BlueprintSys.RC.Services.csproj
@@ -98,6 +98,7 @@
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Net.Http.Formatting, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\..\packages\Microsoft.AspNet.WebApi.Client.5.2.3\lib\net45\System.Net.Http.Formatting.dll</HintPath>
       <Private>True</Private>
@@ -128,6 +129,7 @@
     <Compile Include="MessageHandlers\BoundaryReachedActionHandler.cs" />
     <Compile Include="MessageHandlers\MessageActionHandler.cs" />
     <Compile Include="MessageHandlers\Notifications\EmailSettingsRetriever.cs" />
+    <Compile Include="MessageHandlers\Notifications\LogoDataProvider.cs" />
     <Compile Include="MessageHandlers\Notifications\SmtpClient.cs" />
     <Compile Include="MessageHandlers\PropertyChange\PropertyChangeMessageHandler.cs" />
     <Compile Include="MessageHandlers\PropertyChange\PropertyChangeActionHelper.cs" />
@@ -184,6 +186,11 @@
   <ItemGroup>
     <Folder Include="Models\Enums\" />
     <Folder Include="Models\Exceptions\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Blueprint_logo_Transparent.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
